udpate header and package json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "demo2",
-  "homepage": "https://pradeep8130.github.io/epr",
+  "homepage": "https://wpplugin.newsoftdemo.info/demo/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
